# Livana

./: .env.example  .gitignore  README.md  docker-compose.yml
ai-screening/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ai-screening/ai_screening/: callback.py  config.py  graph.py  ipfs.py  main.py  models.py
android/: .gitignore  PROJECT_STRUCTURE.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
backend/: .env.example  .gitignore  mvnw.cmd  pom.xml
docs/: android_api_reference.md  android_prd.md  android_ui_implementation_guide.md  android_user_flows.md  android_visual_spec.md  backend_prd.md  scheme.md
docs/mockups/: 01-welcome.html  02-home.html  03-explore.html  04-pool-detail.html  05-donate.html  06-filter-sort.html  07-pool-donations.html  08-pool-proofs.html  09-donor-leaderboard.html  10-ngo-leaderboard.html  11-ngo-profile.html  12-connect-wallet.html  13-link-wallet.html  14-network-warning.html  15-donate-review.html  16-donate-progress.html  17-donate-success.html  18-my-donations.html  19-profile.html  20-settings.html  21-become-ngo.html  22-ngo-application.html  23-email-verify.html  24-application-status.html  25-pinata-keys.html  26-ngo-home.html  27-create-pool-form.html  28-create-pool-progress.html  29-submit-proof.html  30-my-proofs.html  31-ngo-reputation.html  32-transaction-sheet.html  33-states.html  34-skeletons.html  (+3 more)
smartcontracts/: .gitignore  Makefile  README.md  Smart_Contracts_Prd.md  foundry.toml
(+335 files in other folders)
